test/expressions/new-expr/has-arg-list.good
has-arg-list.chpl:19: syntax error: 'new' expression is missing its argument list
has-arg-list.chpl:20: syntax error: 'new' expression is missing its argument list
has-arg-list.chpl:27: syntax error: 'new' expression is missing its argument list
has-arg-list.chpl:27: syntax error: 'new' expression is missing its argument list
has-arg-list.chpl:35: syntax error: 'new' expression is missing its argument list
has-arg-list.chpl:36: syntax error: 'new' expression is missing its argument list
has-arg-list.chpl:37: syntax error: 'new' expression is missing its argument list
has-arg-list.chpl:38: syntax error: 'new' expression is missing its argument list
has-arg-list.chpl:41: syntax error: 'new' expression is missing its argument list
has-arg-list.chpl:42: syntax error: 'new' expression is missing its argument list
has-arg-list.chpl:43: syntax error: 'new' expression is missing its argument list
has-arg-list.chpl:44: syntax error: 'new' expression is missing its argument list
has-arg-list.chpl:47: syntax error: 'new' expression is missing its argument list
